# karyakram-backend

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
karyakram_backend/: .env.example  config.py  main.py
karyakram_backend/api/: event.py  user.py
karyakram_backend/api/routes/: event.py  user.py
karyakram_backend/app/: main.py
karyakram_backend/config/: config.py
karyakram_backend/db/: database.py  karyakram.db
karyakram_backend/models/: category.py  event.py  event_hashtag.py  event_user.py  group.py  group_user.py  hashtag.py  notification.py  user.py
karyakram_backend/schemas/: event.py  eventschema.py  userschema.py
migrations/: env.py
migrations/versions/: d7a77e0a78b0_create_events_table.py  db96dbde20e9_add_phone_number_to_events_tables.py
tests/: test_events.py
