[tool.poetry]
name = "karyakram-backend"
version = "0.1.0"
description = ""
authors = ["Bijay Upreti <bjupreti123@gmail.com>"]
readme = "README.md"
packages = [{include = "karyakram_backend"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
