[tool.poetry]
name = "karyakram-backend"
version = "0.1.0"
description = ""
authors = ["Bijay Upreti <bjupreti123@gmail.com>"]
readme = "README.md"
packages = [{include = "karyakram_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.7"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
